--- a/packages/ui/src/index.css
+++ b/packages/ui/src/index.css
@@ -41,11 +41,9 @@
   --button-default-hover-bg: var(--separator-color);
   --button-icon-fill: var(--accent-color-d1);
   --button-primary-active-bg: #3d454f;
+  --button-primary-hover-bg: #67727e;
   --button-primary-bg: #4b5563;
   --button-primary-color: #fff;
-  --button-primary-focus-bg: #373f47;
-  --button-primary-hover-bg: #424c58;
-  --button-text-color: inherit;
 
   --details-error-color: #d73a49;
   --details-scrollbar-thumb-bg: var(--text-secondary-color);
@@ -69,6 +67,25 @@
   --status-menu-border-color: #e0e7eb;
   --status-menu-text: rgba(0, 0, 0, 0.87);
   --sticky-header-bg: rgba(245, 248, 250, 0.85);
+  --tooltip-bg: rgba(45, 55, 72, 0.95);
+  --tooltip-text-color: #fff;
+
+  --dropdown-bg: var(--card-bg);
+  --dropdown-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --dropdown-border-color: rgba(34, 36, 38, 0.15);
+
+  --json-edit-gutter-bg: #f5f5f5;
+  --json-edit-gutter-border-color: #ddd;
+  --json-edit-gutter-active-bg: hsl(0, 0%, 87%);
+  --json-edit-cursor-color: rgba(45, 55, 72, 0.95);
+
+  --hl-string: #d14;
+  --hl-number: teal;
+  --hl-type: #458;
+  --hl-keyword: #990073;
+  --hl-built_in: #0086b3;
+  --hl-attribute: navy;
+  --hl-meta: #999;
 }
 
 .dark-mode {
@@ -108,15 +125,15 @@
   --button-basic-focus-box-shadow: 0 0 0 1px rgba(255, 255, 255, 0.4) inset,
     0 0 0 0 rgba(255, 255, 255, 0.2) inset;
   --button-basic-focus-color: rgba(255, 255, 255, 0.9);
+
   --button-default-active-bg: var(--text-secondary-color);
   --button-default-hover-bg: #3a4556;
   --button-icon-fill: var(--card-text-secondary-color);
   --button-primary-active-bg: #4b5563;
   --button-primary-bg: #505a65;
   --button-primary-color: #cfcfcf;
-  --button-primary-focus-bg: #4e5865;
   --button-primary-hover-bg: #3b4758;
-  --button-text-color: #e0e0e0;
+
   --details-error-color: #f56565;
   --details-scrollbar-thumb-bg: var(--text-secondary-color);
   --details-scrollbar-track-bg: rgba(255, 255, 255, 0.1);
@@ -140,6 +157,26 @@
   --status-menu-active-text: var(--text-color);
   --status-menu-active-border: var(--accent-color);
   --sticky-header-bg: rgba(24, 29, 36, 0.9);
+
+  --tooltip-bg: hsla(218, 15%, 35%, 0.95);
+  --tooltip-text-color: var(--text-color);
+
+  --dropdown-bg: var(--card-bg);
+  --dropdown-shadow: 0 10px 15px -3px rgb(0 0 0 / 0.1), 0 4px 6px -4px rgb(0 0 0 / 0.1);
+  --dropdown-border-color: #303746;
+
+  --json-edit-gutter-bg: #47546b;
+  --json-edit-gutter-border-color: transparent;
+  --json-edit-gutter-active-bg: var(--input-bg);
+  --json-edit-cursor-color: var(--accent-color-d1);
+
+  --hl-string: #ff6088;
+  --hl-number: #00aaaa;
+  --hl-type: #9fb0da;
+  --hl-keyword: #f294da;
+  --hl-built_in: #0086b3;
+  --hl-attribute: navy;
+  --hl-meta: #999;
 }
 
 body {
